# 2022_TP_HW2

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
include/: Column.hpp  Matrix.hpp  RealContainer.hpp  Row.hpp  matrix.hpp  rationalcontainer.hpp  tools.hpp  vector.hpp
src/: main.cpp
tests/: CMakeLists.txt  test.cpp
